# chessnt

./: .gitignore  Cargo.toml  LICENSE-GPL3.md  bench.sh  local_build_and_run_web.sh  profile.sh  readme.md  recompile_web.sh  upload.sh
.github/workflows/: release.yml
export_html/: index.html
licenses/: LICENSE-3rdparty.csv  license-tool.toml
optimising/: measure-avg.sh
src/: board.rs  coord.rs  lib.rs  main.rs  referee.rs  render.rs  theme.rs  time.rs  ui.rs
src/core/: array_union.rs  clipboard.rs  coord.rs  input.rs  interpolation.rs  time.rs
src/screen/: anchorer.rs  camera.rs  render.rs  shader.rs  theme.rs  ui.rs  ui_board.rs  ui_dev.rs
src/shaders/: antialias_fragment.glsl  character_fragment.glsl  floor_fragment.glsl  outline_fragment.glsl
src/world/: board.rs  bot.rs  bot_chess.rs  moves.rs  piece.rs  referee.rs  team.rs
src/world/board/: board_draw.rs  board_ui.rs  tracking.rs
