[package]
name = "chessnt"
version = "0.1.0"
edition = "2024"
default-run = "chessnt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.4.14"
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.16.0" }
#juquad = { path = "../juquad/" }
gamepads = { version = "=0.1.7", default-features = false }
#web-sys = { version = "=0.3.91", features = ["Clipboard"] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#clipboard-rs = "=0.3.3"
#
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#web-sys = { version = "=0.3.91", features = ["Clipboard"] }

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 0

[profile.release]
strip = true
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
