[package]
name = "chessnt"
version = "0.1.0"
edition = "2024"
default-run = "chessnt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "=0.4.15"
#macroquad = { path = "../macroquad" }
macroquad = { git = "https://github.com/not-fl3/macroquad.git", rev = "92279a746405949138616714918fc0f120171352" } # workaround until this is released: https://github.com/not-fl3/miniquad/commit/9ad1866049d59e89c79dd3442973adf1bfbce548
#macroquad = { git = "https://github.com/jmmut/macroquad.git", rev = "92279a746405949138616714918fc0f120171352" }
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.20.0" }
#juquad = { path = "../juquad/" }
gamepads = { version = "=0.1.7", default-features = false }
#web-sys = { version = "=0.3.91", features = ["Clipboard"] }
#macroquad-profiler = "=0.2.0"

[patch.crates-io]
#miniquad = "=0.4.11"
macroquad = { git = "https://github.com/not-fl3/macroquad.git", rev = "92279a746405949138616714918fc0f120171352" }
# for juquad to pick up my mq fork
#macroquad = { git = "https://github.com/jmmut/macroquad.git", rev = "92279a746405949138616714918fc0f120171352" }
#macroquad = { path = "../macroquad" }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#clipboard-rs = "=0.3.3"
#
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#web-sys = { version = "=0.3.91", features = ["Clipboard"] }


[profile.dev]
opt-level = 1

[profile.test]
opt-level = 0

[profile.release]
strip = true
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false
